# book-tts

./: .gitignore  LICENSE  README.md  book_tts.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
book_tts/: __init__.py  config.py  main.py  markup.py  models.py  pipeline.py
book_tts/audio/: m4b_builder.py  merger.py
book_tts/gui/: app.py  components.py  state.py
book_tts/parsers/: base.py  epub_parser.py  markdown_parser.py  mobi_parser.py  number_converter.py  text_cleaner.py
book_tts/tts/: client.py  edge_client.py  rate_limiter.py  sml.py  synthesizer.py
book_tts/utils/: checkpoint.py  file_utils.py  history.py  preferences.py  progress.py
tests/: conftest.py  test_file_utils.py  test_models.py  test_number_converter.py  test_text_cleaner.py
