[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "book-tts"
version = "2.2.0"
description = "Ebook to Audiobook converter with GUI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "BookTTS Contributors"}
]
keywords = ["tts", "audiobook", "epub", "mobi", "text-to-speech"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "mobi",
    "requests>=2.31",
    "urllib3>=2.0",
    "numpy>=1.24",
    "soundfile>=0.12",
    "pydub>=0.25",
    "tqdm>=4.65",
    "gradio>=4.0",
    "json-repair>=0.15",
    "Pillow>=10.0",
]

[project.optional-dependencies]
audio = ["mutagen>=4.9"]
edge = ["edge-tts>=6.1"]
wetext = ["WeTextProcessing>=1.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.5",
]

[project.scripts]
book-tts = "book_tts.main:main"

[tool.setuptools.packages.find]
include = ["book_tts*"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "W", "I", "N", "UP", "B"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
