[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "book-tts"
version = "3.0.0"
description = "Ebook to Audiobook converter with GUI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "BookTTS Contributors"}
]
keywords = ["tts", "audiobook", "epub", "mobi", "text-to-speech"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "ebooklib",
    "beautifulsoup4",
    "lxml",
    "mobi",
    "requests",
    "urllib3",
    "pydub",
    "tqdm",
    "gradio",
    "mutagen",
]

[project.optional-dependencies]
edge = ["edge-tts"]
wetext = ["WeTextProcessing"]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "black",
    "ruff",
    "mypy",
]

[project.scripts]
book-tts = "book_tts.main:main"

[tool.setuptools.packages.find]
include = ["book_tts*"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "W", "I", "N", "UP", "B"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
